--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
-    "test": "jest",
-    "postinstall": "husky install"
+    "test": "jest"
   },
   "husky": {
     "hooks": {
