--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "yarn test --watch",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public"
+    "build-storybook": "build-storybook -s ./public",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
@@ -29,7 +30,9 @@
     "next-pwa": "^5.2.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "styled-icons": "^10.33.0",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -51,7 +54,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.0",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.4",
     "lint-staged": "^10.5.4",
