--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
     }
   ],
   "background_color": "#06092B",
-  "description": "Boilerplate utilizanto Typescript, React, NextJS e Styled Components",
+  "description": "Boilerplate utilizando Typescript, React, NextJS e Styled Components",
   "display": "fullscreen",
   "start_url": "/",
   "theme_color": "#06092B"
